<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView 
	  		
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		
	  		android:layout_marginTop="5dp"
	  		android:text="@string/hello_world"
	  		style="@style/normalText"/> 
	  		<TextView 
	  		
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		
	  		android:layout_marginTop="5dp"
	  		android:text="@string/hello_world"
	  		style="@style/normalText"/> 
	  		<TextView 
	  		
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		
	  		android:layout_marginTop="5dp"
	  		android:text="@string/app_name"
	  		style="@style/normalText"/> 
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"  >
                    <TextView 
	  		
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		
	  		android:layout_marginTop="5dp"
	  		android:text="@string/login_label_username"
	  		style="@style/normalText"/> 
                    
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView 
	  		
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		
	  		android:layout_marginTop="5dp"
	  		android:text="@string/hello_world"
	  		style="@style/normalText"/> 
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" 
                    android:orientation="vertical">
                    <TextView 
	  		
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		
	  		android:layout_marginTop="5dp"
	  		android:text="@string/login_label_password"
	  		style="@style/normalText"/> 
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>